[package]
name = "source"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
ctrlc = "3.5.1"
evdev = "0.13.2"
lazy_static = "1.5.0"
libc = "0.2.182"
pcap = "2.4.0"
pnet = "0.35.0"
rand = "0.10.0"
signal-hook = "0.4.3"
time = { version = "0.3.46", features = ["formatting"] }

[[bin]]
name = "commander"
path = "src/main.rs"

[[bin]]
name = "keylogger_bin"
path = "src/keylogger.rs"
